made icons more visible fixed filter svg

--- a/Play/Agents/roulette/style.css
+++ b/Play/Agents/roulette/style.css
@@ -52,7 +52,12 @@ body video {
 .agent-card {
   height: 80px;
   width: 80px;
-  border: solid white 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  position: relative;
+  transition: 0.3s ease;
 }
 .agent-card img {
   width: 80px;
@@ -66,10 +71,161 @@ body video {
   background-color: rgba(255, 255, 255, 0.1);
   border-color: rgb(254, 255, 190);
 }
+
+.agent_icon_icon {
+  width: 80px;
+  position: relative;
+  z-index: 0;
+}
+
+.agent-card.locked .agent_icon_icon {
+  opacity: 0.3;
+}
+
+.agent-card {
+  position: relative;
+  transition: 0.3s ease;
+}
+
+.agent_icon_inner_border_corner-tl {
+  width: 2px;
+  height: 2px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 1);
+  z-index: 1;
+}
+
+.agent_icon_inner_border_corner-tr {
+  width: 2px;
+  height: 2px;
+  position: absolute;
+  top: 0;
+  left: 78px;
+  background-color: rgba(255, 255, 255, 1);
+  z-index: 1;
+}
+
+.agent_icon_inner_border_corner-bl {
+  width: 2px;
+  height: 2px;
+  position: absolute;
+  top: 78px;
+  left: 0;
+  background-color: rgba(255, 255, 255, 1);
+  z-index: 1;
+}
+
+.agent_icon_inner_border_corner-br {
+  width: 2px;
+  height: 2px;
+  position: absolute;
+  top: 78px;
+  left: 78px;
+  background-color: rgba(255, 255, 255, 1);
+  z-index: 1;
+}
+
+.agent_icon_inner_border_t {
+  width: 80px;
+  height: 2px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.3);
+  z-index: 1;
+}
+
+.agent_icon_inner_border_r {
+  width: 2px;
+  height: 80px;
+  position: absolute;
+  top: 0;
+  left: 78px;
+  background-color: rgba(255, 255, 255, 0.3);
+  z-index: 1;
+}
+
+.agent_icon_inner_border_b {
+  width: 80px;
+  height: 2px;
+  position: absolute;
+  top: 78px;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.3);
+  z-index: 1;
+}
+
+.agent_icon_inner_border_l {
+  width: 2px;
+  height: 80px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.3);
+  z-index: 1;
+}
+
+.selected .agent_icon_inner_border_t {
+  background-color: #eaeeb2;
+}
+
+.selected .agent_icon_inner_border_r {
+  background-color: #eaeeb2;
+}
+
+.selected .agent_icon_inner_border_b {
+  background-color: #eaeeb2;
+}
+
+.selected .agent_icon_inner_border_l {
+  background-color: #eaeeb2;
+}
+
+.agent_icon_inner_bg {
+  width: 72px;
+  height: 72px;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  background-color: rgba(255, 255, 255, 0.15);
+  z-index: 0;
+}
+
+.locked .agent_icon_inner_bg {
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
+.agent_icon_inner_fg {
+  width: 72px;
+  height: 72px;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  background-color: rgba(255, 255, 255, 0);
+  z-index: 2;
+  transition: 0.3s ease;
+}
+
+.agent-card .agent_icon_inner_fg {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.selected .agent_icon_inner_bg {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.not-selected {
+  opacity: 0.3;
+}
+
 .locked {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.75);
   position: relative;
   display: inline-block;
+  color: white;
+  opacity: 1;
 }
 .locked::before {
   content: url(assets/lock.svg);
@@ -81,16 +237,23 @@ body video {
 .rollbutton {
   z-index: 1;
   color: white;
-  font-size: 70px;
-  background-color: #ff4655;
-  padding: 10px 50px;
+  font-size: 50px;
+  background-color: #5feeb7a4;
+  padding: 10px 30px;
   border-radius: 2px;
   transition: 0.3s ease;
   cursor: pointer;
   position: absolute;
-  top: 160px;
+  bottom: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
 }
-
+.rollbutton::before {
+  content: url(assets/roll.svg);
+  margin-right: 10px;
+}
 .reset-button {
   z-index: 1;
   color: white;
@@ -102,7 +265,15 @@ body video {
   cursor: pointer;
   position: absolute;
   bottom: 65px;
-  right: 300px;
+  right: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
+.reset-button::before {
+  content: url(assets/reset-svgrepo-com.svg);
+  margin-right: 10px;
 }
 .filters {
   position: absolute;
@@ -146,6 +317,10 @@ body video {
   width: 40px;
   height: 40px;
   border-radius: solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
 }
 
 .lockSentinels {
